fix: inbox outbox pattern
