# internal/feature/auth/delivery/http/handler/ldap_login_handler.go
@@ -29,9 +29,9 @@ func NewLDAPLoginHandler(useCase LDAPLoginUseCase) *LDAPLoginHandler {
 // @Accept json
 // @Produce json
 // @Param request body dto.AuthPayload true "LDAP Login request"
-// @Success 200 {object} map[string]interface{}
-// @Failure 400 {object} map[string]interface{}
-// @Failure 401 {object} map[string]interface{}
+// @Success 200 {object} response.SuccessResponse{data=dto.TokenResponse}
+// @Failure 400 {object} response.ErrorResponse
+// @Failure 401 {object} response.ErrorResponse
 // @Router /auth/login/ldap [post]
 func (h *LDAPLoginHandler) Handle(c *gin.Context) {
 	var req dto.LDAPLoginPayload
